Add camera flipper and more functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">PushUpDetector</string>
     <string name="counter">Counter</string>
-    <string name="selesai">Selesai</string>
+    <string name="flip">Flip</string>
 </resources>
