Add working communicator between MainThread and BackgroundThread

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="congrats2">Keep Up the Good Work! I\'ll see you tomorrow!</string>
     <string name="reps">reps</string>
     <string name="redoPushUp">Do Push Up again!</string>
+    <string name="finish">Finish</string>
 </resources>
